; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/stdlib/extr_putenv.c__putenv.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/stdlib/extr_putenv.c__putenv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_putenv(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  %7 = load i32, i32* @CP_ACP, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @MultiByteToWideChar(i32 %7, i32 0, i8* %8, i32 -1, i32* null, i32 0)
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = sext i32 %10 to i64
  %12 = mul i64 %11, 4
  %13 = trunc i64 %12 to i32
  %14 = call i32* @malloc(i32 %13)
  store i32* %14, i32** %6, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %29

18:                                               ; preds = %1
  %19 = load i32, i32* @CP_ACP, align 4
  %20 = load i8*, i8** %3, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @MultiByteToWideChar(i32 %19, i32 0, i8* %20, i32 -1, i32* %21, i32 %22)
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @SetEnv(i32* %24)
  store i32 %25, i32* %5, align 4
  %26 = load i32*, i32** %6, align 8
  %27 = call i32 @free(i32* %26)
  %28 = load i32, i32* %5, align 4
  store i32 %28, i32* %2, align 4
  br label %29

29:                                               ; preds = %18, %17
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32 @MultiByteToWideChar(i32, i32, i8*, i32, i32*, i32) #1

declare dso_local i32* @malloc(i32) #1

declare dso_local i32 @SetEnv(i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
